--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
+
+@font-face {
+    font-family: omega;
+    src: url("./assets/fonts/Circular.ttf") format("woff");
+}
+
+body{
+    margin: 0;
+    padding: 0;
+    font-family: omega;
+}
+
+.container{
+    width: 100%;
+    height: 100%;
+    max-width: 90%;
+    padding: 0px 10px;
+    margin-right: auto;
+    margin-left: auto;
+}
