--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -1,79 +1,86 @@
 @import "../../assets/style/variables.scss";
 @import "../../assets/style/mixin.scss";
 
-.dashboard{
+.omega {
+  .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
     background-color: $blue;
-    height: 85vh;
-    .dashboardCard{
-        .header{
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            color: $white;
-            margin: 0px 15px;
-            padding: 15px 0px;
-            .logo{
-                font-size: $fontSize18;
-                font-weight: $fw600;
-            }
-            .headerMid{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 20px;
-                font-size: $fontSize12;
-            }
-            .cart{
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                gap: 10px;
-                font-size: $fontSize14;
-                .cartNumber{
-                    background-color: $ochereYellow;
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                    width: 22px;
-                    height: 22px;
-                    border-radius: 50%;
-                }
-            }
-        }
-        .homePage{
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            padding-top: 100px;
-            .homeSection{
-                margin: 0px 10rem;
-                padding-left: 12rem;
-                .homeImage{
-                    height: 60%;
-                    width: 60%;
-                }
-            }
-            .contentHeading{
-                color: $white;
-                .homeHeading{
-                    width: 50%;
-                    @include heading;
-                    margin-bottom: 15px;
-                }
-                .headingContent{
-                    font-size: $fontSize12;
-                    margin-bottom: 15px;
-                }
-            }
-            .discountSection{
-                background-color: $liteBlue;
-                width: 12rem;
-                .discountContent{
-                    display: flex;
-                    justify-content: center;
-                    align-items: center;
-                }
-            }
-        }
+    height: 80px;
+    color: $white;
+    padding: 0 20px;
+    .siteLogo {
+      font-size: $fontSize24;
+      font-weight: 500;
     }
+    .navLinks {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 16px;
+
+      .navItems {
+        font-size: 16px;
+        color: rgba(255, 255, 255, 0.7);
+        cursor: pointer;
+        &:hover {
+          color: $white;
+        }
+        &:focus {
+          color: $white;
+        }
+      }
+    }
+    .rightHeaderSection {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      .cart {
+      }
+      .cartItems {
+        width: 25px;
+        height: 25px;
+        margin: 0 1px 0 2px;
+        border-radius: 20.3px;
+        background-color: #fedc5a;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: $black;
+        .itemsCount {
+        }
+      }
+    }
+  }
+
+  .topSection {
+    background-color: $blue;
+    height: calc(100vh - 80px);
+    width: 100%;
+    .headphoneSection {
+     max-width: 100%;
+     display: flex;
+     margin: 0 15%;
+     padding-top: 5rem;
+     .leftSection{
+         display: flex;
+         align-items: center;
+         img{
+            width: 90%;
+            height: 100%;        
+         }
+     }
+     .rightSection{
+        display: flex;
+        align-items: center;
+        margin-left: 7rem;
+         .sectionHeading{
+             @include heading;
+             width: 55%;
+         }
+     }
+    }
+  }
 }
