--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -8,21 +8,44 @@
     </div>
     <div class="rightHeaderSection">
       <div class="cart">Cart</div>
-      <div class="cartItems"> 
+      <div class="cartItems">
         <div class="itemsCount">3</div>
       </div>
     </div>
   </div>
-  
-  <div class="topSection">
-     <div class="headphoneSection">
-         <div class="leftSection">
-             <img src="../../assets/images/headphonesVertical.png" />
-         </div>
-         <div class="rightSection">
-            <div class="sectionHeading">Enjoy every single beat on headphone!</div>
-         </div>
-     </div>
-  </div>
 
+  <div class="topSection">
+    <div class="headphoneSection">
+      <div class="leftSection">
+        <img src="../../assets/images/headphonesVertical.png" />
+      </div>
+      <div class="rightSection">
+        <div class="rightSectionContent">
+          <div class="sectionHeading">
+            Enjoy every single beat on headphone!
+          </div>
+          <div class="sectionSubHeading">
+            For iPhone, iPad, and Android users, be sure your product’s firmware
+            is up to date through the Bose connect app.
+          </div>
+          <div class="discountCard">
+            <div class="discountCardContent">
+              <div class="price">$299</div>
+              <button class="btn">Save 30% today</button>
+            </div>
+            <div class="originalPrice">Original price $399</div>
+          </div>
+          <div class="cartItem">
+            <div class="cartCount">
+              <input class="cart" type="text" />
+              <div class="cartItemCount">
+                <button class="btn">+</button>
+                <button class="btn">-</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
