--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -11,6 +11,7 @@ $fontSize24: 24px;
 $fontSize26: 26px;
 $fontSize28: 28px;
 $fontSize30: 30px;
+$fontSize36: 36px;
 
 //variables for color
 $blue: #5454d4;
