--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -43,9 +43,264 @@
                 <button class="btn">-</button>
               </div>
             </div>
+            <div class="addToCart">
+              <button class="cartBtn">Add to cart</button>
+            </div>
           </div>
         </div>
       </div>
+    </div>
+  </div>
+
+  <!-- second Section -->
+  <div class="secondSection">
+    <div class="headphoneSection">
+      <div class="leftSection">
+        <div class="leftSectionContent">
+          <div class="sectionHeading">Get noise free sound everytime</div>
+          <div class="sectionSubHeading">
+            Create custom landing pages with Omega that converts more visitors
+            than any website. With lots of unique blocks, you can easily build a
+            page without coding.
+          </div>
+          <div class="designFeatures">
+            <div class="design">
+              <img
+                class="cardImg"
+                src="../../assets/images/cards.svg"
+                alt="card"
+              />
+            </div>
+            <div class="designFeatureContent">
+              <strong>50+ Unique Design Blocks</strong> with Carefully Coded
+            </div>
+          </div>
+          <div class="mobileDesign">
+            <div class="design">
+              <img
+                class="mobileImg"
+                src="../../assets/images/blueMobile.svg"
+                alt="card"
+              />
+            </div>
+            <div class="designFeatureContent">
+              <strong>Mobile First Design</strong> on Every Devices
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="rightSection">
+        <img src="../../assets/images/headphones.png" />
+      </div>
+    </div>
+  </div>
+
+  <!-- Third Section -->
+  <div class="thirdSection">
+    <div class="thirdSectionHeading">
+      <div class="headingContent">It’s everything you’ll ever need</div>
+    </div>
+    <div class="featuresBlock">
+      <div class="blockOne">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/cards.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">50+ Unique Design Blocks</div>
+      </div>
+      <div class="blockTwo">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/blueMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Multiple Layouts</div>
+      </div>
+      <div class="blockThree">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/yellowMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Mobile First Design</div>
+      </div>
+    </div>
+    <div class="featuresBlockTwo">
+      <div class="blockOne">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/blueMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Fully Responsive</div>
+      </div>
+      <div class="blockTwo">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/redMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Bootstrap 4 Framework</div>
+      </div>
+    </div>
+    <div class="featuresBlockThree">
+      <div class="blockOne">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/greenMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Humanly Support</div>
+      </div>
+      <div class="blockTwo">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/redMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Lifetime Updates</div>
+      </div>
+      <div class="blockThree">
+        <div class="design">
+          <img
+            class="mobileImg"
+            src="../../assets/images/blueMobile.svg"
+            alt="card"
+          />
+        </div>
+        <div class="designFeatureContent">Rich Documentation</div>
+      </div>
+    </div>
+  </div>
+
+  <!-- fourth Section -->
+  <div class="forthSection">
+    <div class="headingContent">
+      <div class="forthSectionHeading">Enjoy your music</div>
+    </div>
+    <div class="subheadingContent">
+      <div class="sectionSubHeading">
+        Create custom landing pages with Omega that converts more visitors than
+        any website. With lots of unique blocks, you can easily build a page
+        without coding.
+      </div>
+    </div>
+    <div class="cards">
+      <img
+        class="manCard"
+        src="../../assets/images/manCard.png"
+        alt="manCard"
+      />
+      <img
+        class="womenCard"
+        src="../../assets/images/womenCard.png"
+        alt="womenCard"
+      />
+    </div>
+  </div>
+
+  <!-- fifth section -->
+  <div class="fifthSection">
+    <div class="fifthHeading">2k+ people are using this headset</div>
+    <div class="fifthSubHeading">
+      Create custom landing pages with Omega that converts more visitors than
+      any website. With lots of unique blocks, you can easily build a page
+      without coding.
+    </div>
+    <div class="tryBtn">
+      <button class="btn">Try it now</button>
+    </div>
+  </div>
+
+  <!-- sixth section -->
+  <div class="sixthSection">
+    <div class="headingContent">
+      <div class="forthSectionHeading">What users say</div>
+    </div>
+    <div class="subheadingContent">
+      <div class="sectionSubHeading">
+        Create custom landing pages with Omega that converts more visitors than
+        any website.
+      </div>
+    </div>
+    <div class="feedback">
+      <div class="feedbackConfig">
+        <div class="feedbackContent">
+          OMG! I cannot believe that I have got a brand new landing page after
+          getting Omega. It was super easy to edit and publish.
+        </div>
+        <div class="feedbackPerson">
+          <div class="personImg">
+            <img
+              class="manImg"
+              src="../../assets/images/manAccount.jpg"
+              alt=""
+            />
+          </div>
+          <div class="personInfo">
+            <div class="personName">Jonathan Taylor</div>
+            <div class="personDesignation">CEO at Creativex</div>
+          </div>
+        </div>
+      </div>
+      <div class="feedbackConfig">
+        <div class="feedbackContent">
+          OMG! I cannot believe that I have got a brand new landing page after
+          getting Omega. It was super easy to edit and publish.
+        </div>
+        <div class="feedbackPerson">
+          <div class="personImg">
+            <img
+              class="manImg"
+              src="../../assets/images/womenAccount.jpg"
+              alt=""
+            />
+          </div>
+          <div class="personInfo">
+            <div class="personName">Marie Stanley</div>
+            <div class="personDesignation">Digital Marketer, Writer</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <!-- seventh section -->
+  <div class="seventhSection">
+    <div class="seventhHeading">
+      <div>Enjoy every beat.</div>
+      <div>Get a new headphone.</div>
+    </div>
+    <div class="buyBtn">
+      <button class="btn">Buy now</button>
+    </div>
+  </div>
+
+  <!-- footer section -->
+  <div class="footer">
+    <div class="siteLogo">Omega</div>
+    <div class="navLinks">
+      <div class="navItems">Support</div>
+      <div class="navItems">Privacy Policy</div>
+      <div class="navItems">Terms and Conditions</div>
+    </div>
+    <div class="rightHeaderSection">
+      <div class="copyright">© 2020 UXTheme, All Rights Reserved</div>
     </div>
   </div>
 </div>
