--- a/src/assets/style/variables.scss
+++ b/src/assets/style/variables.scss
@@ -25,6 +25,7 @@ $bgBlue: rgba(84, 84, 212, 0.1);
 $bgYellow: rgba(254, 220, 90, 0.1);
 $bgGreen: rgba(119, 191, 65, 0.1);
 $black: #000000;
+$purple: #413e65;
 
 //variable for font-weight
 $fw100: 100;
